--- a/apps/next-app/tsconfig.json
+++ b/apps/next-app/tsconfig.json
@@ -20,9 +20,17 @@
       }
     ],
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "@lib/*": ["./apps/packages/lib/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "../packages/lib/schema.ts"
+  ],
+
   "exclude": ["node_modules"]
 }
