--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -7,7 +7,8 @@
     "jsx": "react-jsx",
     "baseUrl": ".",
     "paths": {
-      "@utils/*": ["packages/utils/src/*"]
+      "@utils/*": ["./apps/packages/utils/src/*"],
+      "@lib/*": ["./apps/packages/lib/*"]
     }
   }
 }
