remove emailing from cloudflare worker

--- a/apps/workers/odd-snowflake-5c79/wrangler.jsonc
+++ b/apps/workers/odd-snowflake-5c79/wrangler.jsonc
@@ -6,13 +6,6 @@
 	"compatibility_date": "2025-10-11",
 	"observability": {
 		"enabled": true
-	},
-	"vars": {
-		"EMAIL_FROM": "predict@samfelton.com"
-	},
-	"send_email": [
-		{
-			"name": "EMAIL"
-		}
-	]
+	}
+	// "vars": {}
 }
