--- a/apps/workers/odd-snowflake-5c79/wrangler.jsonc
+++ b/apps/workers/odd-snowflake-5c79/wrangler.jsonc
@@ -6,6 +6,13 @@
 	"compatibility_date": "2025-10-11",
 	"observability": {
 		"enabled": true
-	}
+	},
+	"r2_buckets": [
+		{
+			"bucket_name": "images",
+			"binding": "images",
+			"remote": true
+		}
+	]
 	// "vars": {}
 }
